putting seo schema file into snippets folder

--- a/src/templates/product.liquid
+++ b/src/templates/product.liquid
@@ -26,3 +26,4 @@ $(document).on('click', '#ProductThumbs img', function(event) {
 <script type="application/json" id="ProductJson">
  {{ product | json }}
 </script>
+{% include 'seo_schema' %}
