--- a/src/layout/theme.liquid
+++ b/src/layout/theme.liquid
@@ -28,7 +28,7 @@ MIT License
   {% if page_description %}<meta name="description" content="{{ page_description | escape }}">{% endif %}
   {% include 'meta-social-tags' %}
   {% include 'meta-favorites' %}
-
+  {% include 'seo_schema' %}
 
   <!-- Shopify ============================================================= -->
   {{ content_for_header }}
