cdnjs link added

--- a/src/layout/theme.liquid
+++ b/src/layout/theme.liquid
@@ -24,6 +24,7 @@ MIT License
   <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
   <meta name="theme-color" content="{{ settings.color_primary }}">
   <link rel="canonical" href="{{ canonical_url }}">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jsonld/0.4.12/jsonld.min.js"></script>
   <title>{% include 'meta-title' %}</title>
   {% if page_description %}<meta name="description" content="{{ page_description | escape }}">{% endif %}
   {% include 'meta-social-tags' %}
