--- a/src/layout/theme.liquid
+++ b/src/layout/theme.liquid
@@ -27,9 +27,8 @@ MIT License
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jsonld/0.4.12/jsonld.min.js"></script>
   <title>{% include 'meta-title' %}</title>
   {% if page_description %}<meta name="description" content="{{ page_description | escape }}">{% endif %}
-  {% include 'meta-social-tags' %}
-  {% include 'meta-favorites' %}
-  {% include 'seo_schema' %}
+
+  {% include 'meta-seo' %}
 
   <!-- Shopify ============================================================= -->
   {{ content_for_header }}
@@ -63,7 +62,7 @@ MIT License
   </script>
 </head>
 
-<body id="{{ page_title | handle }}" class="{% if customer %}customer-logged-in {% endif %}template-{{ template | replace: '.', ' ' | truncatewords: 1, '' | handle }}{% if template.suffix != null %} suffix-{{ template.suffix }}{% endif %}" itemscope itemtype="http://schema.org/WebSite">
+<body id="{{ page_title | handle }}" class="{% if customer %}customer-logged-in {% endif %}template-{{ template | replace: '.', ' ' | truncatewords: 1, '' | handle }}{% if template.suffix != null %} suffix-{{ template.suffix }}{% endif %}" >
   {% section 'theme-header' %}
 
   <main id="MainContent" role="main">
