--- a/src/styles/utils/mixins.scss
+++ b/src/styles/utils/mixins.scss
@@ -91,7 +91,7 @@
   width: 100%;
   margin-left: 0;
   margin-right: 0;
-  .column {
+  > .column {
     float: none;
     display: table-cell;
     &.middle {
