--- a/src/styles/global/global.scss
+++ b/src/styles/global/global.scss
@@ -101,7 +101,6 @@ textarea,
 select {
   max-width: 100%;
   height: $gutter;
-  line-height: 100%;
   padding: 0 $spacing*2;
   font-size: $h4;
   font-family: inherit;
@@ -109,7 +108,7 @@ select {
   border: $borderWeight $borderStyle $colorBorder;
   border-radius: $borderRadius;
   color: $colorText;
-  @include prefixer(appearance, none, $prefixes);
+  @include prefixer(appearance, none);
   @include transition();
   &.error {
     border-color: $colorHighlight;
@@ -120,8 +119,7 @@ select {
   &:-moz-placeholder,
   &::-moz-placeholder,
   &:-ms-input-placeholder {
-    line-height: 100%;
-    height: $gutter;
+
   }
   // Safari placeholders
   &::-webkit-textfield-decoration-container {
@@ -211,7 +209,7 @@ input[type="reset"] {
   color: $colorBackground;
   text-align: center;
   cursor: pointer;
-  @include prefixer(appearance, none, $prefixes);
+  @include prefixer(appearance, none);
   @include transition();
   &:hover {
     background-color: darken($colorBrand, $adjustAmount);
