IE select styling, image sizing cleanup

--- a/src/styles/global/global.scss
+++ b/src/styles/global/global.scss
@@ -247,6 +247,9 @@ a.button {
   select {
     width: 100%;
     padding-right: $spacing*5;
+    &::-ms-expand {
+      display: none;
+    }
   }
 }
 
