--- a/src/assets/styles/layout/theme.scss.liquid
+++ b/src/assets/styles/layout/theme.scss.liquid
@@ -4,3 +4,8 @@
  * Import additional stylesheets into this sheet using CSS imports:
  * @import url('./global/form.scss');
  */
+
+
+body {
+  font-family: sans-serif;
+}
