--- a/src/layout/theme.liquid
+++ b/src/layout/theme.liquid
@@ -1,6 +1,6 @@
 <!doctype html>
 <!-- ===========================================================================
-Feel free to add your own header, but please keep the following:
+Feel free to add your own header, but please don't remove ours
  ___  _   _    _
 /   || | | |  | |
 \__  | | | |  | |  __
