--- a/src/assets/styles/layout/theme.scss.liquid
+++ b/src/assets/styles/layout/theme.scss.liquid
@@ -6,6 +6,14 @@
  */
 
 
+// START TEMPORARY
 body {
-  font-family: sans-serif;
+  font-family: {{ settings.font_body.family }}, {{ settings.font_body.fallback_families }}, sans-serif;
+  font-weight: {{ settings.font_body.weight }};
+  background-color: {{ settings.color_background }};
+  color: {{ settings.color_text }};
 }
+a {
+  color: {{ settings.color_brand }};
+}
+// END TEMPORARY
