--- a/src/assets/styles/layout/theme.scss.liquid
+++ b/src/assets/styles/layout/theme.scss.liquid
@@ -16,4 +16,8 @@ body {
 a {
   color: {{ settings.color_brand }};
 }
+h1, h2, h3, h4, h5 {
+  font-family: {{ settings.font_heading.family }}, {{ settings.font_heading.fallback_families }}, sans-serif;
+  font-weight: {{ settings.font_heading.weight }};
+}
 // END TEMPORARY
